Change alignment for modal elements Fixes #12

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,7 @@ body {
 }
 
 .modal-content img {
+    object-fit: cover;
     width: 150px;
     height: 225px;
 }
@@ -173,6 +174,9 @@ body {
     font-style: italic;
 }
 
+#manga-description, #manga-genres {
+    text-align: justify;
+}
 .chapter-box {
     display: flex;
     justify-content: space-between;
